--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
       <div class="card" onclick="location.href='coletivo.html'">
         <h2>PPR Coletivo</h2>
-        <p>Simulação considerando resultado coletivo, ocorrências e coeficiente por faltas.</p>
+        <p>Simulação do público coletivo (com ocorrências e faltas não justificadas).</p>
         <a href="coletivo.html" class="btn">Calcular</a>
       </div>
 
@@ -148,3 +148,4 @@
   </div>
 </body>
 </html>
+
